--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ button:hover {
             const title = document.getElementById("title").value;
             const author = document.getElementById("author").value;
             const pages = document.getElementById("pages").value;
-            const read = document.getElementById("read").checked ? "yes" : "no";
+            const read = document.getElementById("read").checked ? "no" : "yes";
             
             addBookToLibrary(title, author, pages, read);
             display();
